fix(projects): make project summaries readable