@@ -6,25 +6,30 @@ import com.pablomarotta.smart_task_manager.exception.ProjectNotFoundException;
 import com.pablomarotta.smart_task_manager.exception.UserNotFoundException;
 import com.pablomarotta.smart_task_manager.model.Project;
 import com.pablomarotta.smart_task_manager.model.User;
-import org.springframework.transaction.annotation.Transactional;
+import com.pablomarotta.smart_task_manager.repository.ProjectRepository;
+import com.pablomarotta.smart_task_manager.repository.TaskRepository;
+import com.pablomarotta.smart_task_manager.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
-import com.pablomarotta.smart_task_manager.repository.ProjectRepository;
-import com.pablomarotta.smart_task_manager.repository.UserRepository;
 
+import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ProjectService {
     private final ProjectRepository projectRepository;
     private final UserRepository userRepository;
+    private final TaskRepository taskRepository;
 
     @Transactional
-    public ProjectResponse createProject(ProjectRequest projectRequest){
-        try{
+    public ProjectResponse createProject(ProjectRequest projectRequest) {
+        try {
             User owner = userRepository.findByUsername(projectRequest.getUsername())
                     .orElseThrow(() -> new UserNotFoundException("User not found with username: " + projectRequest.getUsername()));
 
@@ -33,7 +38,7 @@ public class ProjectService {
                     .owner(owner)
                     .build();
             Project savedProject = projectRepository.save(project);
-            return mapToResponse(savedProject);
+            return mapToResponse(savedProject, 0);
         } catch (UserNotFoundException e) {
             throw e;
         } catch (Exception e) {
@@ -46,30 +51,42 @@ public class ProjectService {
                 .orElseThrow(() -> new UserNotFoundException("User not found with username: " + username));
     }
 
+    @Transactional(readOnly = true)
     public List<ProjectResponse> getAllProjects() {
+        Map<Long, Long> taskCounts = taskRepository.countTasksByProject().stream()
+                .collect(Collectors.toMap(
+                        TaskRepository.ProjectTaskCount::getProjectId,
+                        TaskRepository.ProjectTaskCount::getTaskCount
+                ));
+
         return projectRepository.findAll().stream()
-                .map(this::mapToResponse)
-                .collect(java.util.stream.Collectors.toList());
+                .sorted(Comparator.comparing(
+                        Project::getCreatedAt,
+                        Comparator.nullsLast(Comparator.reverseOrder())
+                ))
+                .map(project -> mapToResponse(project, taskCounts.getOrDefault(project.getId(), 0L)))
+                .toList();
     }
 
+    @Transactional(readOnly = true)
     public ProjectResponse getProjectById(Long id) {
         Project project = projectRepository.findById(id)
                 .orElseThrow(() -> new ProjectNotFoundException("Project not found with id: " + id));
-        return mapToResponse(project);
+        return mapToResponse(project, taskRepository.countByProjectId(id));
     }
 
-    private ProjectResponse mapToResponse(Project project){
+    private ProjectResponse mapToResponse(Project project, long taskCount) {
         ProjectResponse projectResponse = new ProjectResponse();
         projectResponse.setId(project.getId());
         projectResponse.setName(project.getName());
+        projectResponse.setObjective(project.getObjective());
+        projectResponse.setTaskCount(taskCount);
         projectResponse.setOwnerId(project.getOwner().getId());
         projectResponse.setOwnerUsername(project.getOwner().getUsername());
-        projectResponse.setCreatedAt(project.getCreatedAt() != null ? 
-            project.getCreatedAt().toString() : null);
+        projectResponse.setCreatedAt(project.getCreatedAt() != null
+                ? project.getCreatedAt().toString()
+                : null);
 
         return projectResponse;
     }
 }
-
-
-
